--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,10 +24,10 @@ android {
         applicationId = "com.example.skills_53_regional_flutter"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+          minSdkVersion 21 // Ensure this line is present
+          targetSdkVersion 30
+          versionCode 1
+          versionName "1.0"
     }
 
     buildTypes {
