--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: skills_53_regional_flutter
 description: "A skills app"
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
@@ -9,16 +9,30 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  csv: ^5.0.0
+  enough_convert: ^1.6.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/favicon.png"
 
 flutter:
   uses-material-design: true
+  fonts:
+    - family: monospace
+      fonts:
+        - asset: assets/fonts/monospace.ttf
 
   assets:
+    - assets/data/news.csv
+    - assets/favicon.png
     - assets/home_logo.png
     - assets/nav_logo.png
     - assets/bg.png
@@ -30,29 +44,3 @@ flutter:
     - assets/icons/home.png
     - assets/icons/people.png
     - assets/icons/menu.png
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
